--- a/android/pytorch_android/javadoc-out/index.html
+++ b/android/pytorch_android/javadoc-out/index.html
@@ -58,15 +58,19 @@
     }
 </script>
 </head>
-<frameset cols="20%,80%" title="Documentation frame" onload="top.loadFrames()">
-<frame src="allclasses-frame.html" name="packageFrame" title="All classes and interfaces (except non-static nested types)">
-<frame src="org/pytorch/package-summary.html" name="classFrame" title="Package, class and interface descriptions" scrolling="yes">
-<noframes>
-<noscript>
-<div>JavaScript is disabled on your browser.</div>
-</noscript>
-<h2>Frame Alert</h2>
-<p>This document is designed to be viewed using the frames feature. If you see this message, you are using a non-frame-capable web client. Link to <a href="org/pytorch/package-summary.html">Non-frame version</a>.</p>
-</noframes>
+<frameset rows="10%,*">
+    <frame src="nav.html" scrolling="no" noresize="noresize"></frame>
+
+    <frameset cols="20%,80%" title="Documentation frame" onload="top.loadFrames()">
+        <frame src="allclasses-frame.html" name="packageFrame" title="All classes and interfaces (except non-static nested types)">
+        <frame src="org/pytorch/package-summary.html" name="classFrame" title="Package, class and interface descriptions" scrolling="yes">
+    </frameset>
+    <noframes>
+        <noscript>
+        <div>JavaScript is disabled on your browser.</div>
+        </noscript>
+        <h2>Frame Alert</h2>
+        <p>This document is designed to be viewed using the frames feature. If you see this message, you are using a non-frame-capable web client. Link to <a href="org/pytorch/package-summary.html">Non-frame version</a>.</p>
+        </noframes>
 </frameset>
 </html>
